# intel-train-inference

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/: qwen25_3b_instruct_lora.ipynb  qwen25_omni3b_lora.ipynb
src/.ipynb_checkpoints/: qwen25_3b_instruct_lora-checkpoint.ipynb
test/: train_mnist.py
