[project]
name = "intel-resource-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "peft>=0.17.1",
    "pip>=25.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
